# Consultation_manager

./: README.md
Server/: .gitignore  Admin.cpp  Admin.h  CMakeLists.txt  Client.cpp  Client.h  ClientLogic.cpp  ClientLogic.h  ClientMessageBuilder.cpp  ClientMessageBuilder.h  ClientMessageBuilderThread.cpp  ClientMessageBuilderThread.h  Context.cpp  Context.h  Dao.cpp  Dao.h  IncomingMessage.cpp  IncomingMessage.h  Message.cpp  Message.h  MessageSender.cpp  MessageSender.h  MongoInstanceContainer.cpp  MongoInstanceContainer.h  ServerSocket.cpp  ServerSocket.h  SynchronizedVector.h  TCPThread.cpp  TCPThread.h  Thread.cpp  Thread.h  ThreadArgs.cpp  ThreadArgs.h  jsons  main.cpp
Server/containers/: DataHandlerThreadArgs.cpp  OutThreadArgs.h  OutgoingMessage.cpp  OutgoingMessage.h  SocketOperatingThreadArgs.h  StoppableThreadArgs.cpp  SynchronizedQueue.h  SynchronizedVector.cpp  SynchronizedVector.h  ThreadArgs.h
Server/containers/synchronizedcontainers/: MutualExclusiveHashMap.cpp  MutualExclusiveHashMap.h  SynchronizedQueue.cpp  SynchronizedQueue.h  SynchronizedVector.h  monitor.h
Server/containers/threadargs/: DataHandlerThreadArgs.h  ListenerThreadArgs.cpp  ListenerThreadArgs.h  OutThreadArgs.cpp  OutThreadArgs.h  ThreadArgs.cpp  (+4 more)
Server/dto/: AcceptAccountsRequest.cpp  AcceptAccountsRequest.h  AcceptAccountsResponse.cpp  AcceptAccountsResponse.h  AcceptConsultationRequest.cpp  AcceptConsultationRequest.h  AcceptConsultationResponse.cpp  AcceptConsultationResponse.h  AllTutorsRequest.cpp  AllTutorsRequest.h  AllTutorsResponse.cpp  AllTutorsResponse.h  CancelConsultationRequest.cpp  CancelConsultationRequest.h  CancelConsultationResponse.cpp  CancelConsultationResponse.h  ConsultationCancellationRequest.cpp  ConsultationCancellationRequest.h  ConsultationResponse.cpp  ConsultationResponse.h  DailyConsultationsListRequest.cpp  DailyConsultationsListRequest.h  DailyConsultationsListResponse.cpp  DailyConsultationsListResponse.h  InactiveUsersRequest.cpp  InactiveUsersRequest.h  InactiveUsersResponse.cpp  InactiveUsersResponse.h  KeyConfirmationRequest.cpp  KeyConfirmationRequest.h  KeyConfirmationResponse.cpp  KeyConfirmationResponse.h  KeyRequest.cpp  KeyRequest.h  KeyResponse.cpp  KeyResponse.h  LoginRequest.cpp  LoginRequest.h  LoginResponse.cpp  LoginResponse.h  (+30 more)
Server/entity/: Account.cpp  Account.h  AccountInfoForClient.cpp  AccountInfoForClient.h  Consultation.cpp  Consultation.h  ConsultationInfoForClient.cpp  ConsultationInfoForClient.h  Entity.cpp  Entity.h
Server/serialization/: Deserializer.cpp  Deserializer.h  Serializable.h  Serializer.cpp  Serializer.h
Server/threads/: ClientInOutAction.cpp  ClientInOutAction.h  ClientLogic.cpp  ClientLogic.h  Encryption.cpp  Encryption.h  MessageSender.cpp  MessageSender.h  TCPThread.cpp  TCPThread.h  Thread.h
(+146 files in other folders)
